Unittest & Build infrastructure added
Summary: phpunit unit test feature added,

Test Plan:
```
phpunit
arc unit
```
commands should work and pass unit tests

Reviewers: tugbadogan

Differential Revision: https://bilkentcbot.phacility.com/D6

--- a/.arcconfig
+++ b/.arcconfig
@@ -1,8 +1,6 @@
 {
 	"project_id" : "CBOT",
 	"conduit_uri" : "https://bilkentcbot.phacility.com/",
-	"unit.engine" : "CBOTTestEngine",
-	"load" : [
-		"library/"
-	]
+	"unit.engine": "PhpunitTestEngine",
+	"phpnuit_config": "phpunit.xml"
 }
