--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
   - 5.5
   - 5.6
   - hhvm
-after_deploy:
+before_deploy:
   - openssl aes-256-cbc -k "$super_secret_password" -in .travis/ssh.key.enc -out .travis/ssh.key -d
   - chmod 600 .travis/ssh.key
   - ssh-add .travis/ssh.key
