Login page added
Summary: Login page added, users can login the system. fixes T6

Test Plan:
```
- Go to http://cihad.cbot.ml/login.php
- Enter admin to the username field
- Enter admin to the password field
- Click Login button
- See successfull login page
```

Reviewers: onur.tan, tugbadogan

Reviewed By: tugbadogan

Subscribers: ilkerburak

Maniphest Tasks: T6

Differential Revision: https://bilkentcbot.phacility.com/D7

--- a/.arcconfig
+++ b/.arcconfig
@@ -1,6 +1,9 @@
 {
 	"project_id" : "CBOT",
 	"conduit_uri" : "https://bilkentcbot.phacility.com/",
+	"load": [
+		"Tests/"
+	],
 	"unit.engine": "PhpunitTestEngine",
 	"phpnuit_config": "phpunit.xml"
 }
